# focal

./: .gitignore  .travis.yml  CHANGES.md  LICENSE  README.md  codecov.yml  ford.md  getCLBinary.py  index.html  make.compiler  make.include  makefile  meson.build  search.html
.github/workflows/: deploy_api_docs.yml  test.yml
examples/: makefile  meson.build  nbody.cl  nbody.f90  platform_query.cl  platform_query.f90  sum.cl  sum.f90
interface/: assignment(=).html  assignment(=)~2.html  fclallochost.html  fclbarrier.html  fclbufferswap.html  fclcleardependencies.html  fclcommandqpool_current.html  fclcommandqpool_next.html  fclcompileprogram.html  fclcreatecommandq.html  fclcreatecommandqpool.html  fclcreatecontext.html  fclcreateuserevent.html  fcldbgcheckbufferinit.html  fcldbgcheckbuffersize.html  fcldbgcheckcontext.html  fcldbgcheckcopybuffersize.html  fcldbgcheckdevice.html  fcldbgcheckkernelargqualifier.html  fcldbgcheckkernelargtype.html  fcldbgcheckkernelnarg.html  fcldbgoptions.html  fcldbgwait.html  fcldefaulterrorhandler.html  fcldumpbufferprofiledata.html  fcldumpbuildlog.html  fcldumpkernelprofiledata.html  fcldumpprofiledata.html  fcldumptracingdata.html  fclenableprofiling.html  fclerrorhandlerinterface.html  fclfilterdevices.html  fclfinddevices.html  fclfreebuffer.html  fclfreehost.html  fclgetdevice.html  fclgetdeviceinfo.html  fclgeterrorstring.html  fclgeteventdurations.html  fclgeteventinfo.html  (+57 more)
lists/: absint.html  files.html  modules.html  procedures.html  types.html
module/: focal.html  focal_debug.html  focal_error.html  focal_hostmemory.html  focal_memory.html  focal_nodebug.html  focal_profile.html  focal_query.html  focal_setup.html  focal_utils.html
sourcefile/: focal.f90.html  focal_debug.f90.html  focal_error.f90.html  focal_hostmemory.f90.html  focal_memory.f90.html  focal_nodebug.f90.html  focal_profile.f90.html  focal_query.f90.html  focal_setup.f90.html  focal_utils.f90.html
src/: .Focal.f90.swp  Debug.f90  Error.f90  Focal.f90  Focal_Debug.f90  Focal_Error.f90  Focal_HostMemory.f90  Focal_Memory.f90  Focal_NoDebug.f90  Focal_Profile.f90  Focal_Query.f90  Focal_Setup.f90  Focal_Utils.f90  HostMemory.f90  Memory.f90  NoDebug.f90  Profile.f90  Query.f90  Setup.f90  Utils.f90  clfortran.f90  meson.build  test.f90
test/: Focal_Test_Utils.f90  error_codes  makefile  meson.build  testEvents.cl  testEvents.f90  testExample.f90  testExample2.f90  testFileSource.f90  testKernelSetup.f90  testKernels.cl  testLocalMem.cl  testLocalMem.f90  testMemoryTransfer.f90  testPinnedMemory.f90  testProfiling.f90  testQueuePool.f90  testSubBuffers.f90  testSummary
tipuesearch/: tipuesearch_content.js
type/: fclbufferpointer.html  fclcommandq.html  fclcommandqpool.html  fclcontext.html  fcldevice.html  fcldevicebuffer.html  fcldevicedouble.html  fcldevicefloat.html  fcldeviceint32.html  fclevent.html  fclkernel.html  fclkernelpointer.html  fcllocalargdouble.html  fcllocalargfloat.html  fcllocalargint32.html  fcllocalargument.html  fclplatform.html  fclprofilecontainer.html  fclprofiler.html  fclprogram.html
